json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,63 @@
 {
  "items": [
   {
+    "id": "eopGD6htRDW9Im6TOEjlFg",
+    "url": "https://weworkremotely.com/remote-jobs/komyoon-inc-ios-engineer",
+    "title": "KOMYOON Inc.: iOS Engineer",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:go/go/3",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:iphone/apple/4",
+      "DBG_TECH1:k/t/w:iphone/mobile/4",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=34, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=25, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "KOMYOON Inc.",
+      "sameAs": "http://www.komyoon.com"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 2, 2019 7:50:20 AM",
+    "validThrough": "Oct 9, 2019 7:50:20 AM",
+    "crawled": "Oct 3, 2019 4:06:29 AM",
+    "content": "<h3> iOS Engineer </h3><div><div>KOMYOON, Inc. is looking for our first full time iOS developer to take our iPhone app to the next level - expanding it to both the iPad and Mac (via Catalyst). We’re a small, self funded company that creates apps for creative professionals. We work with the latest and greatest technologies, and we plan and engineer for the long term.&nbsp;</div><div>&nbsp;</div><div>Above all, we value people who truly care about creating great products and working in a supportive and positive environment. We’re not interested in asking you to solve esoteric computer science problems on a whiteboard, and we don’t expect you to have memorized the iOS SDK.&nbsp;</div><div>&nbsp;</div><div>Day to day, you’ll be expected to create features that delight our customers, and will not be asked to implement the latest growth hacking techniques or privacy destroying analytics frameworks.&nbsp;</div><div>&nbsp;</div><div>On the engineering side, we value pragmatism over perfect architectures, and quick iteration over lengthy, drawn out processes.&nbsp;</div><div>&nbsp;</div><div><strong>Role</strong>&nbsp;</div><div>&nbsp;</div><ul><li>Become our first dedicated developer for a media intensive app for creative professionals.</li><li>Full time, remote position.</li><li>Flexible schedule.</li><li>Drive software development - new features, bug fixes, refactoring, etc.</li><li>Write well designed, testable, and efficient code.</li><li>Faithfully implement UI designs.</li><li>Embrace platforms conventions and features.</li></ul><div>&nbsp;</div><div><strong>Qualifications</strong>&nbsp;</div><div>&nbsp;</div><ul><li>2-3 years of experience programming with Swift on iOS.</li><li>Experience working on a distributed team.</li><li>Excellent English communication skills.</li><li>A love of learning and curiosity about new technologies.</li><li>One or more published apps on the App Store.</li></ul><div>&nbsp;</div><div>If you feel like you would be a great fit, but don’t have all of the above qualifications, reach out anyway! A well written explanation of why you think you would be a great addition to our team can go a long way.&nbsp;</div><div>&nbsp;</div><div><strong>About Us</strong>&nbsp;</div><div>&nbsp;</div><ul><li>KOMYOON is 100% distributed, and we’re open to applicants from all countries.</li><li>We’re a small team, and you’ll be our first dedicated iOS developer.</li><li>We engineer for the latest and greatest, and quickly adopt new technologies where they make sense.</li><li>We run an ethical company, and respect our customers privacy.</li><li>We’re fully self funded.</li><li>We’ve created a supportive environment which rewards long term, sustainable engineering.</li></ul></div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "k07HAwyrRvannaweUBOz6w",
     "url": "https://remoteok.io/jobs/75367",
     "title": "Senior Software Engineer",
