--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,258 @@
 {
  "items": [
   {
+    "id": "wOx_0df_T2SqbUqRgGbNuQ",
+    "url": "https://remote.co/job/transcriptionist-22/",
+    "title": "Transcriptionist",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(you,we,employe,develop,engin,abl,workmat) 2W work 2W from 2W home",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Literably",
+      "sameAs": "https://literably.com/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2019 3:51:27 PM",
+    "validThrough": "Oct 10, 2019 3:51:27 PM",
+    "crawled": "Oct 3, 2019 4:07:47 PM",
+    "content": "<h3>Transcriptionist at <span>Literably</span></h3><div><span><i></i> Remote</span>         | <span> Entry-level </span> | <span> Freelance </span> | <span> International </span></div><div>            <p><strong>Literably Transcriptionist</strong></p><p>Please do not submit a cover letter/resume. We have built a “training mode” that will both teach you how to transcribe and will evaluate your performance. We will hire the applicants who perform well in training.</p><p><strong>Are you looking for a flexible job where you can work from home? Make your own schedule?</strong>&nbsp;Earn great money while sitting in your pajamas? If so, Literably might be the right place for you! Literably is currently looking for transcriptionists and captioners who can listen to audio recordings of students reading and transcribe and caption reading errors.</p><p>What is Literably? Literably is an online literacy assessment system that screens K-8 students for reading difficulties, monitors their progress as readers, and diagnoses skill gaps. Literably’s mission is to help teachers get 100% of their students reading on grade level.</p><p><strong>Benefits:</strong></p><ul><li>Make over $10 per hour</li><li><strong>Work from anywhere</strong></li><li>Make your own schedule</li><li>Get paid every week</li><li>No experience necessary</li><li>Help students and teachers</li></ul><p><strong>Important:</strong></p><ul><li>We’re accepting applicants now, and we will take the first qualified people, so please get in touch!</li><li>Transcriptionists are paid for each recording that they transcribe and are not paid a standardized hourly rate. Our average transcriptionist can make $10-20 per hour, based on how quickly they are able to transcribe recordings.</li></ul><p><strong>To apply:</strong></p><ul><li>Click the blue apply button below</li><li>Create a scorer account</li><li>Read the instructions</li><li>Score 6 recordings</li></ul><p>Please do not submit a cover letter/resume.</p>        </div><div>        <a href='https://docs.google.com/document/d/1tyd0yDcQzvrx33EWmsxWnz-Vq2KtzSsaebWGaA1ECN0/edit' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "aCDJW6gnS1iFSpg3uPfyPw",
+    "url": "https://remote.co/job/moderator-french-and-english/",
+    "title": "Moderator – French and English",
+    "tags": [
+      "DBG:surround``home W base",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Social Element",
+      "sameAs": "https://thesocialelement.agency/"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2019 3:26:14 PM",
+    "validThrough": "Oct 10, 2019 3:26:14 PM",
+    "crawled": "Oct 3, 2019 4:07:47 PM",
+    "content": "<h3>Moderator – French and English at <span>Social Element</span></h3><div><span><i></i> Remote</span>         | <span> Entry-level </span> | <span> Freelance </span> | <span> International </span></div><div>            <p><strong>Location: Multiple Countries</strong></p><p>Have you ever fancied working in the social media industry but didn’t know where to start?</p><p>Are you savvy with social media?</p><p>Are you a native-level French speaker with great English written communication skills?</p><p>Are you available to work both days of the weekend plus some shifts in the week? Saturdays and Sundays are a must!</p><p><em>Answered YES to all of the above? Then, we want to meet you!</em></p><p>The Social Element is not your typical social media agency. Our number one focus is to provide business solutions for global clients through true human interactions driven by data and insights. We use insights to form strategy, then execute across all areas of social, including content, customer service, listening, reporting, and crisis management. We pride ourselves in having exceptional talent in our business. As the pioneers of social, we stay at the forefront by constantly creating, learning, and guiding.</p><p>Our relationships with our clients are true partnerships as we become an extension of their team: trusted, committed, leading.</p><p>urrently, we are looking for a&nbsp;<strong>native-level French Moderator</strong>&nbsp;to provide online moderation services to our clients. In this role, you’ll moderate user-generated content on allocated client sites, and post client-created Standard Response Templates where required. You’ll be reviewing strong graphic images, and written content that violates the guidelines of the community. The Moderator will be key in providing a positive social experience for the users.&nbsp;<strong>This is a freelance, home-based opportunity, ideal for anyone who is interested in working some hours during the week.</strong></p><p><strong>JOB IS FOR YOU IF</strong></p><ul><li>You have native-level French along with fluency in written and spoken English.</li><li>You are a social media enthusiast. You are confident with digital technology, and you know the latest trends in social media like the back of your hand.</li><li>You’ll have sound judgement and brand awareness as you have to make sure posts respond in accordance with our client’s policies and guidelines.</li><li>You have strong communication skills and you know how to “read” between the lines.</li><li>Your background experience comes from either community management, translation, moderation, customer service or social media management.</li><li>If you have experience working in a gaming industry, that would be superb!</li></ul><p><strong>WORKING HOURS</strong></p><ul><li>Both days of the weekend is an absolute must!</li></ul><p><strong>WHAT YOU’LL DO</strong></p><ul><li>Work autonomously to deliver an effective service for our clients, across a variety of social media channels</li><li>Understand the client’s social media strategy, tone-of-voice, and brand guidelines, so you can communicate with customers efficiently and effectively</li><li>Respond to complaints, queries, and to engage with the online audience</li><li>Be responsible for the reputation of the brand online</li><li>Work closely with senior members of the Client Services and Services teams to ensure the project is successfully managed</li><li>Collate and share feedback and insights gained from social media management of the client’s channels</li><li>Complete shift reports (internal reports) accurately and on time</li></ul><p><strong>WHAT TO BRING</strong></p><ul><li>You’ll be expected to already be immersed in social media, but also show willingness to keep up-to-date with industry standards, research, and best practice</li><li>Commercial community and social media management experience, either with a brand, or digital agency</li><li>Native-level French, and fluent in written and spoken English</li><li>Attention to detail is a must, as you’ll be publishing content publicly online</li><li>Experience of using Facebook, Twitter, Instagram and YouTube; experience of platforms such as Pinterest, Instagram, and Vine would be a bonus</li><li>Adept at collating and analysing social media data for client reports</li><li>In-depth knowledge of social media platforms and their audiences</li><li>Confident using, and learning about new social media technology</li></ul>        </div><div>        <a href='http://thesocialelement.applytojob.com/apply/job_20190829113204_NLFXPSZL6QZZICLL/Moderator-French-And-English?source=FLEX' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "_zotog4aQi6ZwM5tY0CALg",
+    "url": "https://news.ycombinator.com/item?id=21146320",
+    "title": "https://silksoftwarehouse.com | Warsaw, Poland | ONSITE (remote might be available after at ...",
+    "tags": [
+      "DBG:surround``remot 3N OR(options, avail, allow) NOT encourag",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:hibernate/java/8",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/3",
+      "DBG_TECH1:k/t/w:javascript/nodejs/3",
+      "DBG_TECH1:k/t/w:jpa/java/8",
+      "DBG_TECH1:k/t/w:spring/java/8",
+      "DBG_TECH1:k/t/w:thymeleaf/java/8",
+      "DBG_TECH1:k/t/w:webpack/frontend/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=1, go=0, nodejs=3, bigdata-ml=0, ruby=0, apple=0, java=34, gamedev=0, php=0, embedded=0, frontend=11}",
+      "REMOTE1/50",
+      "TECH1/java",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "java"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2019 2:46:20 PM",
+    "validThrough": "Oct 10, 2019 2:46:20 PM",
+    "crawled": "Oct 3, 2019 4:07:41 PM",
+    "content": "<a href='https://silksoftwarehouse.com' rel='nofollow'>https://silksoftwarehouse.com</a> | Warsaw, Poland | ONSITE (remote might be available after at least 3 months)<p>We are looking for developers to extend our current teams.</p><p>Java Developers: minimum 1-2 years of experience with Spring, Hibernate/JPA, SQL Databases, REST APIs and at least some basic frontend knowledge (thymeleaf, html, css, js)</p><p>Javascript Developers: minimum 1-2 years of experience with modern javascript including React.js/Redux and webpack</p><p>If you're interested contact me directly: devmab(at)silksh.pl</p>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "a5TAR7G6T_qmI5Rc5E38dg",
+    "url": "https://remote.co/job/radiology-coder/",
+    "title": "Radiology Coder",
+    "tags": [
+      "DBG:surround``12N(work, OR(home,remot), 5N(OR(offic,headquart,onsit), OR(dai,daili,week,weekli,month,monthli)) )",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:backbone.js/frontend/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=8}",
+      "REMOTE1/50",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "Excite Health Partners",
+      "sameAs": "http://excitehealthpartners.com"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 3, 2019 2:53:07 PM",
+    "validThrough": "Oct 10, 2019 2:53:07 PM",
+    "crawled": "Oct 3, 2019 3:07:26 PM",
+    "content": "<h3>Radiology Coder at <span>Excite Health Partners</span></h3><div><span><i></i> Remote</span>        </div><div>            <p>Job ID: 926193<br><strong>Job Location: Remote</strong></p><p><strong>Remote Radiology Coder (temp-perm)</strong></p><p>Are you a Radiology Coder interested in a remote position at a large bed Level I Trauma and Teaching Facility? This facility offers great healthcare benefits and a competitive salary! <strong>They are looking to move quickly so apply now</strong>!</p><p><strong>Required Skills &amp; Experience</strong></p><p>At Excite, we value your unique background and want to be sure your experience matches the job. For the Radiology Coder position, you should meet the following criteria:</p><ul><li>At least 3 years’ Radiology coding experience (Hospital &amp; Professional)</li><li>Radiology coding experience with CPT, modifiers &amp; Dx codes expertise</li><li>Level I or II Trauma, and Teaching Hospital Experience</li><li>Experience with Epic and 3M, preferred</li><li><strong>AAPC or AHIMA certified</strong></li></ul><p><strong>Job Description:</strong></p><ul><li><strong>Job Title: </strong>RemoteRadiology (Hospital/Profee) Coder</li><li><strong>Hospital:</strong> Level 1 Trauma and Teaching Facility</li><li><strong>Remote or Onsite: Remote</strong></li><li><strong>Length: 5 months (temp-perm)</strong></li><li><strong>Start date: </strong>ASAP</li><li><strong>Work Schedule: </strong>Regular business hours, CST</li></ul><p><strong>Joining the Team</strong></p><p>Excite understands that employees are the cornerstone to our success. We are proud to offer the following benefits:</p><ul><li>Competitive compensation</li><li>Health, Vision, Dental plan</li><li>Life and long-term disability</li><li>401k plan with designated company match</li><li>Weekly pay</li><li>Direct deposit</li></ul><p>Since 2010, Excite Health Partners has been a growing leader in the Healthcare consulting and staffing industry. We are committed to the development of the HIM industry, which is why we ensure our employees are educated, prepared and confident. We understand our employees are the backbone of our company, so we work to find the best fit position for each of our unique professionals.</p>        </div><div>        <a href='http://excitehealthpartners.com/job/remote-radiology-coder/' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "Lt7RfEZoQnWaJu6PyMgX6Q",
+    "url": "https://jobmote.com/job/83212/oracle-ebs-techno-functional-consultant-remote-telecommute/",
+    "title": "Oracle EBS Techno-Functional Consultant - Remote / Telecommute",
+    "tags": [
+      "DBG:surround``3N(locat,remot)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Cynet Systems",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Oct 2, 2019 10:08:21 PM",
+    "validThrough": "Oct 5, 2019 10:08:21 PM",
+    "crawled": "Oct 3, 2019 3:06:32 AM",
+    "content": "<div>We are looking for <strong>Oracle EBS Techno-Functional Consultant - Remote / Telecommute</strong> for our client in <strong>Boston, MA</strong>    <strong>Job Title: Oracle EBS Techno-Functional Consultant - Remote / Telecommute</strong>    <strong>Job Location: Boston, MA</strong>    <strong>Job Type: Contract</strong>     <strong>Job Description:</strong>   <ul><li>Must a Techno functional Oracle EBS consultant - Expertise in Financial and order management and manufacturing modules.</li> <li>Working in third-party integrations example (Kofax, Precision FedEx, DHL, SFDC, Robar).</li> <li>Knowledge of integration tools like (Web methods or any tools this is to ensure resource knows the integration).</li> <li>Experience in Application support.</li> <li>ITSM (Incident Management), SLA Management, Monthly reporting.</li> <li>Brake fixes and bugs and change management.</li> <li>Coordinated with DBA and Development teams on Brake fixes.</li> <li>Sound Technical knowledge in debugging the issues.</li> <li>Onsite-offshore coordination.</li> <li>Should drive Month-end and Q-end activities.</li> <li>Perform RCA for Root cause, knowledge articles, and process improvement.</li> <li>Coordinate cross-functional teams (Infra, Application, Help desk, etc.).</li> <li>Good written and verbal communication.</li></ul> - provided by Dice</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "Fcst7IWTQmqLoQ2ozZ-W0w",
     "url": "https://news.ycombinator.com/item?id=21138069",
     "title": "15Five Inc. | Senior Frontend, Python, DevOps, Scrum + more | FULL-TIME REMOTE 15Five (https:/ ...",
